# opencv-examples

./: .gitignore  README.md
EMSkin/: CMakeLists.txt  main.cpp
LDA/: CMakeLists.txt  main.cpp
LDA/cmake/: FindEigen3.cmake
canny/: CMakeLists.txt  main.cpp
cbcrSkin/: CMakeLists.txt  main.cpp
checkPoints/: CMakeLists.txt  main.cpp
dog/: CMakeLists.txt  main.cpp
erosion/: CMakeLists.txt  main.cpp
example1/: CMakeLists.txt  main.cpp
gradient/: CMakeLists.txt  main.cpp
grayImage/: CMakeLists.txt  main.cpp
harris/: CMakeLists.txt  main.cpp
hessian/: CMakeLists.txt  main.cpp
maskedImage/: CMakeLists.txt  main.cpp
maskedImage/scripts/: CMakeLists.txt  mask_generator.rb.in
openImage/: CMakeLists.txt
